tests-system/array-membership-3/output
kitten in arr, warning "does not reference kitten"
^^^^^^ array-membership-3/foo.rsl:10: error: unknown symbol kitten
Processed 1 model, 0 checks and 0 requirement files and found 1 error
